chore: 지수 데이터 입력시 오류 메시지 출력 형태 수정